2005-02-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/connection_pool.cc: connect(): Specify the template1 default 
	database when we do not want to specify a database, because that seems 
	to fail with newer versions of postgres, or on some systems, though 
	I am not sure where it works and where it does not. Hopefully this 
	template1 name is used on all distros.

2005-01-05  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Add intltool-extract.in, intltool-merge.in, 
	intltool-update.in to EXTRA_DIST, possibly fixing the build on some 
	platforms. Bug #162932.

2004-12-26  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list_related.cc: constructor: Show the 
	AddDel widget so that it actually appears on the Details layout. 
	Put the AddDel in a HIG-style frame.

2004-12-25  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtable.[h|cc]: Added a remove() override, so 
	we remove the widget from the list in flowtable as well as from the 
	base GtkContainer list. Do an extra reference() before calling 
	gtk_widget_parent() if the widget is managed, like 
	Gtk::Container::remove() does, so that this container acts like other 
	gtkmm containers.

2004-12-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtable_withfields.[h|cc]: Keep a list of 
	the portals, so we don't have to dynamic_cast the standard children() 
	list so much. Use Bakery::View::remove_view() and delete in 
	remove_all().

2004-12-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/dialog_connection.cc: #included libintl.h to fix build on some 
	systems. Bug 161936 from Mike Castle.

2004-12-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.[h|]cc], and all its derived classes: 
	init_db_details(): Remove the database_name parameter, because we 
	only every use one database now, and it is specified in the connection.
	Also split init_db_details() into init_db_details() and 